--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 .App {
-  text-align: center;
+  justify-content: center;
 }
 
 .App-logo {
   height: 40vmin;
-  pointer-events: none;
+  cursor: pointer;
 }
 
 @media (prefers-reduced-motion: no-preference) {
