--- a/src/index.css
+++ b/src/index.css
@@ -35,8 +35,8 @@ code {
   height: 60px;
   font-family: Inter;
   font-size: 1rem;
-  color: #000;
-  background-color: rgba(217, 217, 217, 1);
+  color: #fff;
+  background-color: rgba(41, 41, 136, 1);
 }
 
 .heroDetail {
@@ -49,27 +49,96 @@ code {
   right: 20%;
   width: 201px;
   height: 102px;
-  background-color: rgba(217, 217, 217, 1);
+  background-color: rgba(255, 204, 0, 0.5);
 }
 
 .heroLeft {
   background-color: rgba(41, 41, 136, 0.1);
 }
 
+.researchRight {
+  background-color: rgba(41, 41, 136, 1);
+  color: #fff;
+  font-family: Inter;
+  width: 85%;
+  height: 200px;
+  padding: 2.5rem 0rem;
+  padding-left: 3rem;
+  border-radius: 25px;
+}
+
+.numbText {
+  font-size: 60px;
+  font-weight: 700;
+}
+
 .circle {
-  height: 60px;
-  width: 60px;
+  height: 40px;
+  width: 40px;
   border: none;
   border-radius: 50%;
-  background-color: rgba(217, 217, 217, 1);
+  background-color: rgba(255, 204, 0, 1);
 }
 
 .heroBtn2 {
-  background-color: rgba(217, 217, 217, 1);
-  width: 75%;
+  background-color: rgba(255, 204, 0, 1);
+  width: 100%;
+  height: 50px;
+  color: #1c1c1c;
+  margin-top: .4rem;
 }
 
 .numberSection {
   margin: auto 6rem;
   padding-top: 6rem;
+}
+
+.researchShadow {
+  position: absolute;
+  width: 65%;
+  height: 150px;
+  margin: auto 3.5rem;
+  border-radius: 20px;
+  background-color: rgba(41, 41, 136, 0.06);
+}
+
+.wave {
+  width: 25%;
+  height: 50%;
+  margin: auto 10rem;
+  margin-top: 3rem;
+  transform: rotate(140deg);
+}
+
+form {
+  background-color: rgba(41, 41, 136, 0.07);
+  padding: 3rem;
+  margin: 6rem 0rem;
+  margin-top: 7.5rem;
+}
+
+input {
+  width: 100%;
+  height: 50px;
+  padding: 1rem;
+  margin: .4rem 0rem;
+  border: none;
+  border-radius: .5rem;
+}
+
+input ::placeholder {
+  font-size: 10px;
+  color: rgba(226, 225, 225, 0.75);
+}
+
+.title {
+ font-size: 48px;
+  font-weight: 600;
+  color: rgba(18, 18, 59, 1);
+}
+
+.subTitle {
+  font-size: 26px;
+  font-weight: 600;
+  color: rgba(18, 18, 59, 1);
 }
