--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,49 @@ input ::placeholder {
 }
 
 
+/* @media only screen and (min-width:768px){
+  .hero {
+    margin: auto 6rem;
+    margin-top: -1rem;
+    height: 80vh;
+  }
+  .heroDetail {
+    margin-top: 2rem;
+    padding: 7rem 0rem;
+  }
+
+  .box {
+    position: absolute;
+    top: 22%;
+    right: 5%;
+    width: 180px;
+    height: 102px;
+    background-color: rgba(255, 204, 0, 0.5);
+  }
+
+  .researchShadow {
+    position: absolute;
+    top: 60%;
+    width: 65%;
+    height: 150px;
+    margin: auto 6rem;
+    border-radius: 20px;
+    background-color: rgba(41, 41, 136, 0.06);
+  }
+
+  form {
+    background-color: rgba(41, 41, 136, 0.07);
+    padding: 3rem;
+    margin: 3rem 0rem;
+    margin-top: 0rem;
+  }
+
+  .numberSection {
+    margin: auto 6rem;
+    padding-top: 6rem;
+  }
+} */
+
 @media only screen and (min-width:1024px) {
   .heroImage {
     position: absolute;
