--- a/src/index.css
+++ b/src/index.css
@@ -95,21 +95,21 @@ code {
   transform: rotate(140deg);
 }
 
-form {
+/* form {
   background-color: rgba(41, 41, 136, 0.07);
   padding: 3rem;
   margin: 6rem 0rem;
   margin-top: 7.5rem;
-}
+} */
 
-input {
+/* input {
   width: 100%;
   height: 50px;
   padding: 1rem;
   margin: .4rem 0rem;
   border: none;
   border-radius: .5rem;
-}
+} */
 
 .numberSection {
   padding-top:3rem ;
@@ -289,21 +289,21 @@ input ::placeholder {
     transform: rotate(140deg);
   }
   
-  form {
+  /* form {
     background-color: rgba(41, 41, 136, 0.07);
     padding: 3rem;
     margin: 6rem 0rem;
     margin-top: 7.5rem;
-  }
+  } */
   
-  input {
+  /* input {
     width: 100%;
     height: 50px;
     padding: 1rem;
     margin: .4rem 0rem;
     border: none;
     border-radius: .5rem;
-  }
+  } */
   
   input ::placeholder {
     font-size: 10px;
