--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+.bg-circle{
+    position: fixed;
+    height: 60vh;
+    width: 70vw;
+    border-radius: 100%;
+  
+}
+  .bg-top {
+    top: -12%;
+    left: -28%;
+    background:rgba(41, 41, 136, 0.9);
+    filter: blur(150px);
+    z-index: 1;
+  }
+  
+  .rightCol{
+    /* margin-left: 2px; */
+    /* padding: 6rem 3rem; */
+    z-index: 2;
+  }
+  .bg-down {
+    bottom: -20%;
+    right: -18%;
+    background: rgba(255, 204, 0, 0.9);
+    filter: blur(150px);
+  
+  }
