--- a/src/newContactPage/contact.css
+++ b/src/newContactPage/contact.css
@@ -5,7 +5,7 @@
 }
 
 .form-content {
-    background-color: rgb(213, 159, 159);
+    /* background-color: rgb(213, 159, 159); */
     padding: 3rem 0 ;
 }
 
