--- a/src/Service/Service.css
+++ b/src/Service/Service.css
@@ -29,3 +29,10 @@
   top: 7px;
   right: 7px;
 }
+
+.service-title {
+  font-family: 'inter';
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 80px;
+}
