--- a/src/About/landing.css
+++ b/src/About/landing.css
@@ -9,7 +9,6 @@
     /* height: 3rem; */
 }
 
-
 li{
     color: rgba(41, 41, 136, 1);
     margin-left: 2rem;
@@ -59,6 +58,9 @@ li{
 .arc-right {
     transform: rotate(-36deg);
 }
+.leftCol {
+    position: relative;
+}
 
 .small-circle {
     position: absolute;
@@ -72,8 +74,13 @@ li{
 
 .circle-right {
     right: 17%;
-    top: 110%;
+    top: 70%;
     background-color: rgba(255, 204, 0, 1);
+}
+
+.small-circle-main {
+    left: 21%;
+    top: 5%;
 }
 
 .Lo {
@@ -83,8 +90,8 @@ li{
     position: absolute;
     width: 60px;
     height: 60px;
-    right: 61%;
-    top: 54%;
+    left: 5%;
+    top: 32%;
     border-radius: 50%;
     background-color: rgba(254, 207, 23, 0.9);
     /* filter: blur(6px); */
@@ -141,6 +148,9 @@ li{
 .nav-gap {
     gap: 2rem;
 }
+.leftCol {
+    display: none;
+}
 
 
 @media screen and (min-width:1024px) {
@@ -154,7 +164,19 @@ li{
         justify-content: space-between;
         padding: 2rem 5rem;
     }
+    .leftCol {
+        display: block;
+    }
+}
 
+@media screen and (min-width:725px) {
+  
+    .leftCol {
+        display: block;
+    }
+    .img-arc {
+        top: 0;
+    }
 
 
 }
