--- a/src/components/header/headerFooter.css
+++ b/src/components/header/headerFooter.css
@@ -28,8 +28,8 @@ body {
 }
 
 .headerLogo {
-    width: 50%;
-    height: auto;
+    width: 6rem;
+    height: 3.5rem;
 }
 
 @media (max-width: 800px) {
