--- a/src/components/subsection/subsection.css
+++ b/src/components/subsection/subsection.css
@@ -3,10 +3,16 @@
   gap: 3rem;
   grid-template-columns: repeat(3, 1fr);
 }
+.subsection{
+  margin: auto 5rem;
+  /* padding: 0rem 10rem; */
+}
+
 .background {
   background-color: grey;
   width: 98%;
   height: 25rem;
+  padding: 7rem 0rem;
   margin-bottom: 5rem;
 }
 
