--- a/src/components/subsection/subsection.css
+++ b/src/components/subsection/subsection.css
@@ -1,5 +1,5 @@
 .pattern {
-  margin: auto 3rem;
+  margin: auto 0rem;
   margin-top: 6rem;
 }
 
@@ -9,12 +9,18 @@
 }
 
 .subImg {
-  margin: auto 3rem;
+  margin: auto;
   margin-top: 6rem;
 }
 
 .subsection{
   margin: auto 1rem;
+}
+
+.text {
+  text-align: center;
+  margin: 3rem 0rem;
+  
 }
 
 .valid {
@@ -24,8 +30,8 @@
 }
 
 .brand {
-  width: 8%;
-  margin: auto 1.5rem;
+  width: 40%;
+  margin: auto;
 }
 
 .textBrand {
@@ -39,33 +45,37 @@
 }
 
 @media only screen and (min-width:1024px) {
+  .pattern {
+    margin: auto 3rem;
+    margin-top: 6rem;
+  }
   #pattern {
     font-size: 2.8rem;
     font-family: Inter;
     font-weight: 500;
     color: rgba(18, 18, 59, 1);
   }
-  /* .subsection{
-    margin: auto 4rem;
-  } */
+  .subImg {
+    margin: auto 3rem;
+    margin-top: 6rem;
+  }
   
   .background {
     margin: auto 4rem;
     margin-bottom: 3rem;
   }
   
-  /* .priority {
-    background-color: grey;
-    display: -webkit-inline-flex;
-    width: 50%;
-    margin-top: 5rem;
-    height: 15rem;
-  } */
   .text {
     text-align: center;
     margin: 5rem 0rem;
     
   }
+
+  .brand {
+    width: 8%;
+    margin: auto 1.5rem;
+  }
+  
 
   .text > h5 {
     font-size: 1.6rem;
