--- a/src/components/subsection/subsection.css
+++ b/src/components/subsection/subsection.css
@@ -9,7 +9,7 @@
 }
 
 .subImg {
-  margin: auto;
+  margin: auto ;
   margin-top: 6rem;
 }
 
@@ -21,6 +21,10 @@
   text-align: center;
   margin: 3rem 0rem;
   
+}
+
+.eventImg {
+  width: 100%;
 }
 
 .valid {
