--- a/src/signup/signup.css
+++ b/src/signup/signup.css
@@ -2,18 +2,18 @@
     margin: 0;
 }
 .main-signup {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(37rem, 1fr));
     font-family: 'Inter';
 }
-.color-side {
+.signup-color-side {
     background: #292988;
-    padding: 6rem;
+    padding: 3rem;
     color: white;
+    flex-basis: 40%;
 }
-
+.signup-main-form {
+    flex-basis: 60%;
+}
 .signin-option {
-    margin-bottom: 4rem;
     gap: 5rem;
 }
 
@@ -53,10 +53,6 @@
     color: #292988;
 }
 
-.signup-details {
-    margin-top: 3.438rem;
-}
-
 .signup-details p {
     font-weight: 400;
     font-size: 16px;
@@ -64,8 +60,11 @@
 
 .signup-main{
     background-color: #FFFFFF !important;
+    max-width: 500px;
+    margin: 0 auto;
     width: 100%;
-    padding: 3rem;
+    margin-bottom: 3rem;
+    /* padding: 3rem 0; */
 }
 
 .signup-main input {
@@ -131,8 +130,9 @@
     gap: 1rem;
 }
 .show {
-    display: none ;
+    display: none;
     opacity: 0;
+    visibility: hidden;
 }
 .moved {
     color: #000000;
@@ -140,20 +140,47 @@
 }
 
 @media (max-width: 1200px) {
-    .main-signup {
-        grid-template-columns: repeat(auto-fill, minmax(26rem, 1fr));
-    }
-    .color-side {
+    .signup-color-side {
         padding: 2rem;
+    }
+    
+    .signin-option-btn {
+        padding: 0.5rem 1rem;
     }
 }
 
 @media (max-width: 769px) {
-    .color-side {
+    
+    .signup-main-form {
+        flex-basis: 100%;
+    }
+    .signup-color-side {
         display: none;
     }
     .show {
         display: block;
         opacity: 1;
+        visibility: visible;
+    }
+    .moved {
+        padding: 0.5rem 1rem;
+        border: 1px solid #000000;
+    }
+    .signin-option {
+        margin-bottom: 0rem;
+        gap: 2rem;
+        
+    }
+}
+
+@media (max-width: 500px) {
+    .signup-title {
+        font-size: 24px;
+    }
+    .signup-main{
+        max-width: 100%;
+        margin: 0 auto;
+        width: 100%;
+        padding: 0 3rem 3rem;
     }
 }
