Worked on Sign up functionality

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@ code {
   background: #fff !important;
   color: rgba(41, 41, 136, 1);
   font-size: 1.5rem;
+  padding-top: 0rem;
 }
 
 .heroLeft {
