Worked on Login functionality

--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -139,11 +139,12 @@
     }
 
     .dIcons {
-        margin-top: -6rem;
+        margin-top: 0rem;
+        margin-right: 1rem;
     }
 
     .dIcons1{
-        margin-top: -1.5rem;
+        margin-top: 1rem;
     }
 
     .dSection {
