--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ code {
   top: 50%;
   width: 78%;
   height: 150px;
-  margin: auto 2rem;
+  margin: auto 1.3rem;
   border-radius: 20px;
   background-color: rgba(41, 41, 136, 0.06);
 }
@@ -181,51 +181,47 @@ code {
 
 
 
-/* @media only screen and (min-width:768px){
-  .hero {
-    margin: auto 6rem;
-    margin-top: -1rem;
-    height: 80vh;
-  }
-  .heroDetail {
-    margin-top: 2rem;
-    padding: 7rem 0rem;
-  }
+@media only screen and (min-width:768px){
+  
 
   .box {
     position: absolute;
-    top: 22%;
-    right: 5%;
+    top: 51%;
+    right: 31%;
     width: 180px;
     height: 102px;
     background-color: rgba(255, 204, 0, 0.5);
   }
 
   .researchShadow {
-    position: absolute;
-    top: 60%;
-    width: 65%;
-    height: 150px;
-    margin: auto 6rem;
-    border-radius: 20px;
-    background-color: rgba(41, 41, 136, 0.06);
+    width: 80%;
+    margin: auto 3.8rem;
+    
   }
 
-  form {
+  .wave {
+    width: 25%;
+    height: 50%;
+    margin: auto 14rem;
+    margin-top: 4.5rem;
+    transform: rotate(140deg);
+  }
+
+  .planForm {
     background-color: rgba(41, 41, 136, 0.07);
     padding: 3rem;
     margin: 3rem 0rem;
     margin-top: 0rem;
   }
 
-  .numberSection {
-    margin: auto 6rem;
-    padding-top: 6rem;
-  }
-} */
+  
+}
 
 @media only screen and (min-width:1024px) {
   
+  .heroText {
+    font-size: 1.1rem;
+  }
   
   .box {
     position: absolute;
