--- a/src/index.css
+++ b/src/index.css
@@ -187,6 +187,8 @@ code {
   font-weight: 500;
   justify-content: center; 
   align-items: center;
+  text-align: center;
+  color: rgba(41, 41, 136, 1);
   background-color: rgba(255, 204, 0, .5);
   z-index: 10;
 }
