Trying to fix the check conflict

--- a/src/index.css
+++ b/src/index.css
@@ -189,7 +189,7 @@ code {
   align-items: center;
   /* text-align: center; */
   color: rgba(41, 41, 136, 1);
-  background-color: rgba(255, 204, 0, .5);
+  background-color: rgba(255, 204, 0, 0.2);
   z-index: 10;
 }
 
