--- a/src/index.css
+++ b/src/index.css
@@ -180,17 +180,30 @@ code {
 .fallback {
   position: fixed;
   left: 0;
-  right: 0;
   top: 0;
-  bottom: 0;
-  font-size: 1.3rem;
-  font-weight: 500;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
   justify-content: center; 
   align-items: center;
-  /* text-align: center; */
   color: rgba(41, 41, 136, 1);
-  background-color: rgba(255, 204, 0, 0.2);
+  background: rgba(142, 133, 95, 0.2);
   z-index: 10;
+}
+
+.fallback::after {
+  content: "";
+  width: 75px;
+  height: 75px;
+  border: 15px solid rgba(255, 204, 0, 0.1);
+  border-top-color: rgba(255, 204, 0, 0.8);
+  border-radius: 50%;
+  animation: loading 0.75s ease infinite;
+}
+
+@keyframes loading {
+  from { transform: rotate(0turn)}
+  to { transform: rotate(1turn)}
 }
 
 .fallback p {
@@ -198,6 +211,8 @@ code {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  font-size: 1.1rem;
+  font-weight: 500;
 }
 
 .closeBtn {
